pref: 调整结构，添加通用函数、宏

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 description = "交互式命令行"
 
 [dependencies]
-clap = { version = "4.1.9", features = ["derive"] }
 shlex = "1.1.0"
+
+[dependencies.clap]
+version = "4.1.9"
+features = ["derive", "cargo"]
